==> ARMmbed/mbed-os/targets/TARGET_Atmel/TARGET_SAM_CortexM4/drivers/pmc/pmc.c <==
#include "pmc.h"
# define MAX_PERIPH_ID    31
# define MAX_PERIPH_ID    44
# define MAX_PERIPH_ID    29
# define MAX_PERIPH_ID    34
# define MAX_PERIPH_ID    47
# define MAX_PERIPH_ID    63
# define MAX_PERIPH_ID    63
# define MAX_PERIPH_ID    63
# define MAX_PERIPH_ID    63
# define MAX_PERIPH_ID    31
# define MAX_PERIPH_ID    43
# define MAX_PERIPH_ID    47
# define MAX_PERIPH_ID    47
# define MAX_PERIPH_ID    47
# define MAX_PERIPH_ID    50

    void pmc_mck_set_prescaler(uint32_t ul_pres)
{
    PMC->PMC_MCKR =
        (PMC->PMC_MCKR & (~PMC_MCKR_PRES_Msk)) | ul_pres;
    while (!(PMC->PMC_SR & PMC_SR_MCKRDY));
}

void pmc_mck_set_source(uint32_t ul_source)
{
    PMC->PMC_MCKR =
        (PMC->PMC_MCKR & (~PMC_MCKR_CSS_Msk)) | ul_source;
    while (!(PMC->PMC_SR & PMC_SR_MCKRDY));
}

uint32_t pmc_switch_mck_to_sclk(uint32_t ul_pres)
{
    uint32_t ul_timeout;

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_CSS_Msk)) |
                    PMC_MCKR_CSS_SLOW_CLK;
    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_PRES_Msk)) | ul_pres;
    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    return 0;
}

uint32_t pmc_switch_mck_to_mainck(uint32_t ul_pres)
{
    uint32_t ul_timeout;

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_CSS_Msk)) |
                    PMC_MCKR_CSS_MAIN_CLK;
    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_PRES_Msk)) | ul_pres;
    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    return 0;
}

uint32_t pmc_switch_mck_to_pllack(uint32_t ul_pres)
{
    uint32_t ul_timeout;

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_PRES_Msk)) | ul_pres;
    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_CSS_Msk)) |
                    PMC_MCKR_CSS_PLLA_CLK;

    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    return 0;
}

uint32_t pmc_switch_mck_to_pllbck(uint32_t ul_pres)
{
    uint32_t ul_timeout;

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_PRES_Msk)) | ul_pres;
    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    PMC->PMC_MCKR = (PMC->PMC_MCKR & (~PMC_MCKR_CSS_Msk)) |
                    PMC_MCKR_CSS_PLLB_CLK;
    for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY);
            --ul_timeout) {
        if (ul_timeout == 0) {
            return 1;
        }
    }

    return 0;
}

uint32_t pmc_enable_periph_clk(uint32_t ul_id)
{
    if (ul_id > MAX_PERIPH_ID) {
        return 1;
    }

    if (ul_id < 32) {
        if ((PMC->PMC_PCSR0 & (1u << ul_id)) != (1u << ul_id)) {
            PMC->PMC_PCER0 = 1 << ul_id;
        }
#if (SAM3S || SAM3XA || SAM4S || SAM4E || SAM4C || SAM4CM || SAM4CP || SAMG55 || SAMV71 || SAMV70 || SAME70 || SAMS70)
    } else {
        ul_id -= 32;
        if ((PMC->PMC_PCSR1 & (1u << ul_id)) != (1u << ul_id)) {
            PMC->PMC_PCER1 = 1 << ul_id;
        }
#endif
    }

    return 0;
}

uint32_t pmc_disable_periph_clk(uint32_t ul_id)
{
    if (ul_id > MAX_PERIPH_ID) {
        return 1;
    }

    if (ul_id < 32) {
        if ((PMC->PMC_PCSR0 & (1u << ul_id)) == (1u << ul_id)) {
            PMC->PMC_PCDR0 = 1 << ul_id;
        }
#if (SAM3S || SAM3XA || SAM4S || SAM4E || SAM4C || SAM4CM || SAM4CP || SAMG55 || SAMV71 \
		|| SAMV70 || SAME70 || SAMS70)
    } else {
        ul_id -= 32;
        if ((PMC->PMC_PCSR1 & (1u << ul_id)) == (1u << ul_id)) {
            PMC->PMC_PCDR1 = 1 << ul_id;
        }
#endif
    }
    return 0;
}

uint32_t pmc_is_periph_clk_enabled(uint32_t ul_id)
{
    if (ul_id > MAX_PERIPH_ID) {
        return 0;
    }

#if (SAM3S || SAM3XA || SAM4S || SAM4E || SAM4C || SAM4CM || SAM4CP || SAMV71 \
		|| SAMV70 || SAME70 || SAMS70)
    if (ul_id < 32) {
#endif
        if ((PMC->PMC_PCSR0 & (1u << ul_id))) {
            return 1;
        } else {
            return 0;
        }
#if (SAM3S || SAM3XA || SAM4S || SAM4E || SAM4C || SAM4CM || SAM4CP || SAMV71 \
		|| SAMV70 || SAME70 || SAMS70)
    } else {
        ul_id -= 32;
        if ((PMC->PMC_PCSR1 & (1u << ul_id))) {
            return 1;
        } else {
            return 0;
        }
    }
#endif
}

void pmc_cpck_set_prescaler(uint32_t ul_pres)
{
    PMC->PMC_MCKR =
        (PMC->PMC_MCKR & (~PMC_MCKR_CPPRES_Msk)) | PMC_MCKR_CPPRES(ul_pres);
}

void pmc_cpck_set_source(uint32_t ul_source)
{
    PMC->PMC_MCKR =
        (PMC->PMC_MCKR & (~PMC_MCKR_CPCSS_Msk)) | ul_source;
}

void pmc_enable_waitmode(void)
{
    uint32_t i;

    /* Flash in wait mode */
    i = PMC->PMC_FSMR;
    i &= ~PMC_FSMR_FLPM_Msk;
    i |= ul_flash_in_wait_mode;
    PMC->PMC_FSMR = i;

    /* Set the WAITMODE bit = 1 */
    PMC->CKGR_MOR |= CKGR_MOR_KEY_PASSWD | CKGR_MOR_WAITMODE;

    /* Waiting for Master Clock Ready MCKRDY = 1 */
    while (!(PMC->PMC_SR & PMC_SR_MCKRDY));

    /* Waiting for MOSCRCEN bit cleared is strongly recommended
     * to ensure that the core will not execute undesired instructions
     */
    for (i = 0; i < 500; i++) {
        __NOP();
    }
    while (!(PMC->CKGR_MOR & CKGR_MOR_MOSCRCEN));

#if (!SAMG)
    /* Restore Flash in idle mode */
    i = PMC->PMC_FSMR;
    i &= ~PMC_FSMR_FLPM_Msk;
    i |= PMC_WAIT_MODE_FLASH_IDLE;
    PMC->PMC_FSMR = i;
#endif
}

void pmc_enable_waitmode(void)
{
    uint32_t i;

    PMC->PMC_FSMR |= PMC_FSMR_LPM; /* Enter Wait mode */
    SCB->SCR &= (uint32_t) ~ SCB_SCR_SLEEPDEEP_Msk; /* Deep sleep */

    __WFE();

    /* Waiting for MOSCRCEN bit cleared is strongly recommended
     * to ensure that the core will not execute undesired instructions
     */
    for (i = 0; i < 500; i++) {
        __NOP();
    }
    while (!(PMC->CKGR_MOR & CKGR_MOR_MOSCRCEN));

}

void pmc_enable_backupmode(void)
{
#if (SAM4C || SAM4CM || SAM4CP)
    uint32_t tmp = SUPC->SUPC_MR & ~(SUPC_MR_BUPPOREN | SUPC_MR_KEY_Msk);
    SUPC->SUPC_MR = tmp | SUPC_MR_KEY_PASSWD;
    while (SUPC->SUPC_SR & SUPC_SR_BUPPORS);
#endif
    SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;
#if (SAM4S || SAM4E || SAM4N || SAM4C || SAM4CM || SAM4CP || SAMG55 || SAMV71 || SAMV70 || SAME70 || SAMS70)
    SUPC->SUPC_CR = SUPC_CR_KEY_PASSWD | SUPC_CR_VROFF_STOP_VREG;
    __WFE();
    __WFI();
#else
    __WFE();
#endif
}

uint32_t pmc_enable_sleepwalking(uint32_t ul_id)
{
    uint32_t temp;
#if (SAMG55 || SAMV71 || SAMV70 || SAME70 || SAMS70)
    if ((7 <= ul_id) && (ul_id<= 29)) {
#else
    if ((8 <= ul_id) && (ul_id<= 29)) {
#endif
        temp = pmc_get_active_status0();
        if (temp & (1 << ul_id)) {
            return 1;
        }
        PMC->PMC_SLPWK_ER0 = 1 << ul_id;
        temp = pmc_get_active_status0();
        if (temp & (1 << ul_id)) {
            pmc_disable_sleepwalking(ul_id);
            return 1;
        }
        return 0;
    }
#if (SAMV71 || SAMV70 || SAME70 || SAMS70)
    else if ((32 <= ul_id) && (ul_id<= 60)) {
        ul_id -= 32;
        temp = pmc_get_active_status1();
        if (temp & (1 << ul_id)) {
            return 1;
        }
        PMC->PMC_SLPWK_ER1 = 1 << ul_id;
        temp = pmc_get_active_status1();
        if (temp & (1 << ul_id)) {
            pmc_disable_sleepwalking(ul_id);
            return 1;
        }
        return 0;
    }
#endif
    else {
        return 1;
    }
}

/**
 * \brief Disable the sleepwalking of specified peripheral.
 *
 * \note The ID must NOT be shifted (i.e., 1 << ID_xxx).
 *
 * \param ul_id Peripheral ID (ID_xxx).
 *
 * \retval 0 Success.
 * \retval 1 Invalid parameter.
 */
uint32_t pmc_disable_sleepwalking(uint32_t ul_id)
{
#if (SAMG55 || SAMV71 || SAMV70 || SAME70 || SAMS70)
    if ((7 <= ul_id) && (ul_id<= 29)) {
#else
    if ((8 <= ul_id) && (ul_id<= 29)) {
#endif
        PMC->PMC_SLPWK_DR0 = 1 << ul_id;
        return 0;
    }
#if (SAMV71 || SAMV70 || SAME70 || SAMS70)
    else if ((32 <= ul_id) && (ul_id<= 60)) {
        ul_id -= 32;
        PMC->PMC_SLPWK_DR1 = 1 << ul_id;
        return 0;
    }
#endif
    else {
        return 1;
    }
}

/**
 * \brief Return peripheral sleepwalking enable status.
 *
 * \return the status register value.
 */
uint32_t pmc_get_sleepwalking_status0(void)
{
    return PMC->PMC_SLPWK_SR0;
}

/**
 * \brief Return peripheral active status.
 *
 * \return the status register value.
 */
uint32_t pmc_get_active_status0(void)
{
    return PMC->PMC_SLPWK_ASR0;
}

#endif

#if (SAMV71 || SAMV70 || SAME70 || SAMS70)
/**
 * \brief Return peripheral sleepwalking enable status.
 *
 * \return the status register value.
 */
uint32_t pmc_get_sleepwalking_status1(void)
{
    return PMC->PMC_SLPWK_SR1;
}

/**
 * \brief Return peripheral active status.
 *
 * \return the status register value.
 */
uint32_t pmc_get_active_status1(void)
{
    return PMC->PMC_SLPWK_ASR1;
}
#endif

/// @cond 0
/**INDENT-OFF**/
#ifdef __cplusplus
}
#endif
/**INDENT-ON**/
/// @endcond
