==> ARMmbed/mbed-os/targets/TARGET_MICROCHIP/TARGET_PIC32CX/asflib/pmc.c <==
#include "pic32cx.h"
#include "stdint.h"
#include "stdbool.h"
#include "pmc.h"
#include "pll.h"
#define MAX_PERIPH_ID    96

void pmc_mck_set_prescaler(uint32_t ul_pres)
{
	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_PRES_Msk)) | ul_pres;
	while (!(PMC->PMC_SR & PMC_SR_MCKRDY)) {
	}
}

void pmc_mck_set_source(uint32_t ul_source)
{
	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_CSS_Msk)) | ul_source;
	while (!(PMC->PMC_SR & PMC_SR_MCKRDY)) {
	}
}

uint32_t pmc_switch_mck_to_sclk(uint32_t ul_pres)
{
	uint32_t ul_timeout;

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_CSS_Msk)) | PMC_CPU_CKR_CSS_SLOW_CLK;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_PRES_Msk)) | ul_pres;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	return 0;
}

uint32_t pmc_switch_mck_to_mainck(uint32_t ul_pres)
{
	uint32_t ul_timeout;

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_CSS_Msk)) | PMC_CPU_CKR_CSS_MAIN_CLK;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_PRES_Msk)) | ul_pres;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	return 0;
}

uint32_t pmc_switch_mck_to_pllack(uint32_t ul_pres)
{
	uint32_t ul_timeout;

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_PRES_Msk)) | ul_pres;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_CSS_Msk)) | PMC_CPU_CKR_CSS_PLLACK1;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	return 0;
}

uint32_t pmc_switch_mck_to_pllbck(uint32_t ul_pres)
{
	uint32_t ul_timeout;

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_PRES_Msk)) | ul_pres;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_CSS_Msk)) | PMC_CPU_CKR_CSS_PLLBCK;
	for (ul_timeout = PMC_TIMEOUT; !(PMC->PMC_SR & PMC_SR_MCKRDY); --ul_timeout) {
		if (ul_timeout == 0) {
			return 1;
		}
	}

	return 0;
}

uint32_t pmc_enable_periph_clk(uint32_t ul_id)
{
	uint32_t ul_pcr;

	if (ul_id > MAX_PERIPH_ID) {
		return 1;
	}

    if (pmc_is_periph_clk_enabled(ul_id)) {
        return 0;
    }

	/* Read configuration for the PID */
	PMC->PMC_PCR = PMC_PCR_PID(ul_id);

	ul_pcr = PMC->PMC_PCR;
	ul_pcr &= ~PMC_PCR_PID_Msk;
	ul_pcr |= (PMC_PCR_CMD | PMC_PCR_EN | PMC_PCR_PID(ul_id));

	PMC->PMC_PCR = ul_pcr;

	return 0;
}

uint32_t pmc_disable_periph_clk(uint32_t ul_id)
{
	uint32_t ul_pcr;

	if (ul_id > MAX_PERIPH_ID) {
		return 1;
	}

    if (!pmc_is_periph_clk_enabled(ul_id)) {
        return 0;
    }

	/* Read configuration for the PID */
	PMC->PMC_PCR = PMC_PCR_PID(ul_id);

	ul_pcr = PMC->PMC_PCR;
	ul_pcr &= ~(PMC_PCR_EN);
	ul_pcr |= (PMC_PCR_CMD | PMC_PCR_PID(ul_id));

	PMC->PMC_PCR = ul_pcr;

	return 0;
}

uint32_t pmc_is_periph_clk_enabled(uint32_t ul_id)
{
	if (ul_id < 32) {
		return ((PMC->PMC_CSR0 & PMC_MASK_PSTATUS0) & (1 << ul_id));
	} else if (ul_id < 64) {
		return ((PMC->PMC_CSR1 & PMC_MASK_PSTATUS1) & (1 << (ul_id - 32)));
	} else if (ul_id < 96) {
		return ((PMC->PMC_CSR2 & PMC_MASK_PSTATUS2) & (1 << (ul_id - 64)));
	} else if (ul_id <= MAX_PERIPH_ID) {
		return ((PMC->PMC_CSR3 & PMC_MASK_PSTATUS3) & (1 << (ul_id - 96)));
	} else {
		return 0;
	}
}

void pmc_cpck_set_prescaler(uint32_t ul_pres)
{
	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_CPPRES_Msk)) | ul_pres;
	while (!(PMC->PMC_SR & PMC_SR_CPMCKRDY)) {
	}
}

void pmc_cpck_set_source(uint32_t ul_source)
{
	PMC->PMC_CPU_CKR = (PMC->PMC_CPU_CKR & (~PMC_CPU_CKR_CPCSS_Msk)) | ul_source;
	while (!(PMC->PMC_SR & PMC_SR_CPMCKRDY)) {
	}
}

void pmc_enable_waitmode(void)
{
	/* The device must not enter Wait Mode if the asynchronous
	 * partial wake-up is enabled for one of the following PIDs: FLEXCOM and ADC
	 */
	if (PMC->PMC_SLPWK_AIPR & PMC_SLPWK_AIPR_AIP) {
		return;
	}

	/* Flash in wait mode */
	pmc_force_flash_in_wait_mode(ul_flash_in_wait_mode);

	/* Write a 0 to the SLEEPDEEP bit of the Cortex-M4 processor */
	SCB->SCR &= ~(SCB_SCR_SLEEPDEEP_Msk);

	/* Execute the Wait-For-Event (WFE) instruction of the processor */
	__DSB();
//	__WFE();
	__WFI();

	/* Restore Flash in idle mode */
	pmc_force_flash_in_wait_mode(PMC_FSMR_FLPM_FLASH_IDLE);
}

void pmc_enable_backupmode(void)
{
	//cpu_irq_enable();

	if (SUPC->SUPC_MR & SUPC_MR_VREGDIS) {
		if ((SUPC->SUPC_MR & SUPC_MR_LCDMODE_LCDON_EXTVR) == SUPC_MR_LCDMODE_LCDON_EXTVR) {
			/* If the SLCD is used in Backup mode to keep a static message, write a 1 to SUPC_CR.SHDWEOF */
			SUPC->SUPC_CR = SUPC_CR_KEY_PASSWD | SUPC_CR_SHDWEOF;
		} else {
			/* If an external voltage regulator is used for VDDCORE/VDDPLL, write a 1 to SUPC_CR.SHDW */
			SUPC->SUPC_CR = SUPC_CR_KEY_PASSWD | SUPC_CR_SHDW;
		}
	} else {
		/* If the internal core voltage regulator is used, write a 1 to SUPC_CR.VROFF */
		SUPC->SUPC_CR = SUPC_CR_KEY_PASSWD | SUPC_CR_VROFF_STOP_VREG;
	}
}

uint32_t pmc_enable_sleepwalking(uint32_t ul_id)
{
	if (((ul_id >= ID_FLEXCOM0) && (ul_id <= ID_FLEXCOM7)) || (ul_id == ID_ADC)) {
		/* Check Activity in progress */
		if (pmc_get_active_status(ul_id)) {
			return 1;
		}

		/* Enable SleepWalking */
		PMC->PMC_SLPWKCR |= PMC_SLPWKCR_SLPWKSR;

		/* Check Activity in progress */
		if (pmc_get_active_status(ul_id)) {
			pmc_disable_sleepwalking(ul_id);
			return 1;
		}

		return 0;
	}

	return 1;
}

uint32_t pmc_disable_sleepwalking(uint32_t ul_id)
{
	if (((ul_id >= ID_FLEXCOM0) && (ul_id <= ID_FLEXCOM7)) || (ul_id == ID_ADC)) {
		uint32_t ul_splwkcr;

		ul_splwkcr = PMC->PMC_SLPWKCR;

		/* Disable SleepWalking */
		ul_splwkcr &= ~(PMC_SLPWKCR_PID_Msk | PMC_SLPWKCR_SLPWKSR);
		ul_splwkcr |= PMC_SLPWKCR_PID(ul_id) | PMC_SLPWKCR_CMD;
		PMC->PMC_SLPWKCR = ul_splwkcr;

		return 0;
	}

	return 1;
}
